# Rclone-Browser

./: .gitignore  CMakeLists.txt  README.md  install.sh  rclone-browser  setup.sh
scripts/: rclone-browser-win-installer.iss
src/: CMakeLists.txt
